--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -19,19 +19,19 @@ const menuitems = [
   },
   {
     title: "Pricing",
-    path: "/pricing",
+    path: "/rocket-works/pricing",
   },
   {
     title: "About",
-    path: "/about",
+    path: "/rocket-works/about",
   },
   {
     title: "Blog",
-    path: "/blog",
+    path: "/rocket-works/blog",
   },
   {
     title: "Contact",
-    path: "/contact",
+    path: "/rocket-works/contact",
   },
 ];
 ---
@@ -40,20 +40,10 @@ const menuitems = [
   <header class="flex flex-col lg:flex-row justify-between items-center my-5">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
-        <a href="/" class="text-lg"
-          >
+        <a href="/" class="text-lg">
           <span class="font-bold text-slate-800">Rocket</span><span
             class="text-slate-500">works</span
           >
-          <!--<Picture-->
-          <!--  src={logo}-->
-          <!--  alt="Rocket image"-->
-          <!--  widths={[200, 400, 600]}-->
-          <!--  aspectRatio="4:3"-->
-          <!--  sizes="(max-width: 800px) 100vw, 100px"-->
-          <!--  loading="eager"-->
-          <!--  format="avif"-->
-          <!--/>-->
         </a>
         <div class="block lg:hidden">
           <MenuIcon class="w-4 h-4 text-gray-800" />
