--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -25,9 +25,12 @@ import { Icon } from "astro-icon";
       Hello world this is it
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      Astroship is a starter template for startups, marketing websites & landing
-      pages.<wbr /> Built with Astro.build and TailwindCSS. You can quickly create
-      any website with this starter.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum vero
+      ducimus, totam, necessitatibus temporibus id minima quis dolorem est, et
+      iusto molestiae ut tempora nemo tenetur reiciendis atque hic praesentium?.<wbr
+      /> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla odit esse
+      quaerat harum nemo. Magnam quae ea maxime asperiores, et iure recusandae exercitationem
+      aspernatur eos ab soluta. Sit, rem illum!
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
@@ -36,20 +39,7 @@ import { Icon } from "astro-icon";
         target="_blank"
         class="flex gap-1 items-center justify-center"
         rel="noopener">
-        <Icon class="text-white w-5 h-5" name="bx:bxs-cloud-download" />
-
-        Download for Free
+        Contact us
       </Link>
-      <Link
-        size="lg"
-        style="outline"
-        rel="noopener"
-        href="https://github.com/surjithctly/astroship"
-        class="flex gap-1 items-center justify-center"
-        target="_blank">
-        <Icon class="text-black w-4 h-4" name="bx:bxl-github" />
-        GitHub Repo
-      </Link>
-    </div>
   </div>
 </main>
